# sunbeam-m

./: .gitignore  CHANGELOG.md  FIXES.md  OVERVIEW.md  README.md  pyproject.toml  requirements.txt
sunbeam_m/: __about__.py  __init__.py
sunbeam_m/cli/: __init__.py  main.py
sunbeam_m/client/: __init__.py  vpn_client.py
sunbeam_m/core/: __init__.py  crypto.py  framing.py
sunbeam_m/gui/: __init__.py  client_gui.py
sunbeam_m/masquerade/: __init__.py  base.py  http.py  soup.py  ssh.py  tls.py
sunbeam_m/server/: __init__.py  controls.py  vpn_server.py
sunbeam_m/transport/: __init__.py  domain_front.py  tcp.py
tests/: __init__.py  test_crypto.py  test_framing.py  test_masquerade.py
